--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ backend/dist/
 # Vercel
 .vercel/
 
+# Docker (local overrides only - keep Dockerfile and docker-compose.yml)
+docker-compose.override.yml
+*.local.yml
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
